--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,15 +14,6 @@ jobs:
     strategy:
       matrix:
         include:
-          - package-name: ni.protobuf.types
-            proto-subpath: ni/protobuf/types
-            output-format: submodule
-          - package-name: ni.panels.v1.proto
-            proto-subpath: ni/panels/v1
-            output-format: submodule
-          - package-name: ni.measurementlink.proto
-            proto-subpath: ni/measurementlink
-            output-format: subpackage
           - package-name: ni.measurementlink.discovery.v1.proto
             proto-subpath: ni/measurementlink/discovery/v1
             output-format: subpackage
@@ -32,6 +23,18 @@ jobs:
           - package-name: ni.measurementlink.measurement.v2.proto
             proto-subpath: ni/measurementlink/measurement/v2
             output-format: subpackage
+          - package-name: ni.measurementlink.proto
+            proto-subpath: ni/measurementlink
+            output-format: subpackage
+          - package-name: ni.measurementlink.sessionmanagement.v1.proto
+            proto-subpath: ni/measurementlink/sessionmanagement/v1
+            output-format: subpackage
+          - package-name: ni.panels.v1.proto
+            proto-subpath: ni/panels/v1
+            output-format: submodule
+          - package-name: ni.protobuf.types
+            proto-subpath: ni/protobuf/types
+            output-format: submodule
     uses: ./.github/workflows/check_package.yml
     with:
       package-name: ${{ matrix.package-name }}
