Use the ni.measurementlink.proto package

--- a/packages/ni.measurementlink.measurement.v1.proto/pyproject.toml
+++ b/packages/ni.measurementlink.measurement.v1.proto/pyproject.toml
@@ -10,7 +10,7 @@ maintainers = [
 ]
 readme = "README.md"
 repository = "https://github.com/ni/ni-apis-python"
-keywords = ["ni-apis", "discovery"]
+keywords = ["ni-apis", "measurement"]
 classifiers = [
   "Development Status :: 3 - Alpha",
   "Intended Audience :: Developers",
@@ -32,7 +32,7 @@ packages = [{include = "ni", from = "src"}]
 [tool.poetry.dependencies]
 python = "^3.9"
 protobuf = {version=">=4.21"}
-nitypes = {version=">=0.1.0dev3", allow-prereleases=true}
+ni-measurementlink-proto = ">=0.1.0dev0"
 
 [tool.poetry.group.dev.dependencies]
 types-grpcio = ">=1.0"
@@ -92,7 +92,6 @@ exclude = [
 ]
 [[tool.mypy.overrides]]
 module = [
-    "ni.measurementlink.pin_map_context_pb2",
     "ni.measurementlink.measurement.v1.measurement_service_pb2"
 ]
 ignore_missing_imports = true
