--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -28,6 +28,7 @@ jobs:
             output-format: subpackage
           - package-name: ni.measurementlink.sessionmanagement.v1.proto
             proto-subpath: ni/measurementlink/sessionmanagement/v1
+            proto-include-path: '../../third_party/ni-apis/ni/grpcdevice/v1'
             output-format: subpackage
           - package-name: ni.panels.v1.proto
             proto-subpath: ni/panels/v1
