--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -13,6 +13,10 @@ on:
         default: ''
         required: true
         type: string
+      proto-include-path:
+        description: 'Additional path to include in the proto generation.'
+        default: ''
+        type: string
       output-format:
         description: 'submodule or subpackage'
         default: ''
