Another fix attempt

--- a/.github/workflows/check_codegen.yml
+++ b/.github/workflows/check_codegen.yml
@@ -19,7 +19,7 @@ on:
         type: string
       proto-include-path:
         description: 'Additional path to include in the proto generation.'
-        default: ''
+        default: 'abc'
         type: string
       output-basepath:
         description: 'The base output path for codegened files.'
@@ -64,7 +64,7 @@ jobs:
         run: poetry install -v --only main
       - name: Generate gRPC stubs
         run: |
-          poetry run grpc-generator --proto-basepath ${{ inputs.proto-basepath }} --proto-subpath ${{ inputs.proto-subpath }} --proto-include-path ${{ proto-include-path }} --output-basepath ${{ inputs.output-basepath }} --output-format ${{ inputs.output-format }}
+          poetry run grpc-generator --proto-basepath ${{ inputs.proto-basepath }} --proto-subpath ${{ inputs.proto-subpath }} --proto-include-paths ${{ proto-include-path }} --output-basepath ${{ inputs.output-basepath }} --output-format ${{ inputs.output-format }}
       - name: Check for out-of-date gRPC stubs
         run: |
           git add ${{ inputs.output-basepath }}
