Always pass proto-include-path

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,15 +16,19 @@ jobs:
         include:
           - package-name: ni.measurementlink.discovery.v1.proto
             proto-subpath: ni/measurementlink/discovery/v1
+            proto-include-path: ../../third_party/ni-apis
             output-format: subpackage
           - package-name: ni.measurementlink.measurement.v1.proto
             proto-subpath: ni/measurementlink/measurement/v1
+            proto-include-path: ../../third_party/ni-apis
             output-format: subpackage
           - package-name: ni.measurementlink.measurement.v2.proto
             proto-subpath: ni/measurementlink/measurement/v2
+            proto-include-path: ../../third_party/ni-apis
             output-format: subpackage
           - package-name: ni.measurementlink.proto
             proto-subpath: ni/measurementlink
+            proto-include-path: ../../third_party/ni-apis
             output-format: subpackage
           - package-name: ni.measurementlink.sessionmanagement.v1.proto
             proto-subpath: ni/measurementlink/sessionmanagement/v1
@@ -32,9 +36,11 @@ jobs:
             output-format: subpackage
           - package-name: ni.panels.v1.proto
             proto-subpath: ni/panels/v1
+            proto-include-path: ../../third_party/ni-apis
             output-format: submodule
           - package-name: ni.protobuf.types
             proto-subpath: ni/protobuf/types
+            proto-include-path: ../../third_party/ni-apis
             output-format: submodule
     uses: ./.github/workflows/check_package.yml
     with:
