--- a/packages/ni.measurementlink.measurement.v2.proto/pyproject.toml
+++ b/packages/ni.measurementlink.measurement.v2.proto/pyproject.toml
@@ -86,10 +86,7 @@ files = "."
 namespace_packages = true
 strict = true
 explicit_package_bases = true
-exclude = [
-    "docs",
-    ".*\\.pyi$",
-]
+exclude = ["docs"]
 [[tool.mypy.overrides]]
 module = [
     "ni.measurementlink.pin_map_context_pb2",
