Include a local path for ni.measurementlink.proto package

--- a/packages/ni.measurementlink.measurement.v1.proto/pyproject.toml
+++ b/packages/ni.measurementlink.measurement.v1.proto/pyproject.toml
@@ -37,6 +37,8 @@ ni-measurementlink-proto = ">=0.1.0dev0"
 [tool.poetry.group.dev.dependencies]
 types-grpcio = ">=1.0"
 types-protobuf = ">=4.21"
+# Uncomment to use local dependency
+# ni-measurementlink-proto = {path = "../../packages/ni.measurementlink.proto", develop = true}
 
 [tool.poetry.group.lint.dependencies]
 bandit = { version = ">=1.7", extras = ["toml"] }
