--- a/packages/ni.measurementlink.measurement.v1.proto/pyproject.toml
+++ b/packages/ni.measurementlink.measurement.v1.proto/pyproject.toml
@@ -40,6 +40,11 @@ types-protobuf = ">=4.21"
 # During development, use file paths to reference the latest source for packages
 # in the same Git repository.
 ni-measurementlink-proto = {path = "../../packages/ni.measurementlink.proto", develop = true}
+numpy = [
+  { version = ">=1.22", python = ">=3.9,<3.12" },
+  { version = ">=1.26", python = ">=3.12,<3.13" },
+  { version = ">=2.1", python = "^3.13" },
+]
 
 [tool.poetry.group.lint.dependencies]
 bandit = { version = ">=1.7", extras = ["toml"] }
