--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,6 +14,10 @@ jobs:
     strategy:
       matrix:
         include:
+          - package-name: ni.grpcdevice.v1.proto
+            proto-subpath: ni/grpcdevice/v1
+            proto-include-path: ../../proto
+            output-format: subpackage
           - package-name: ni.measurementlink.discovery.v1.proto
             proto-subpath: ni/measurementlink/discovery/v1
             proto-include-path: ../../third_party/ni-apis
