--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         include:
           - package-name: ni.grpcdevice.v1.proto
+            proto-base-path: ../../proto
             proto-subpath: ni/grpcdevice/v1
             proto-include-path: ../../proto
             output-format: subpackage
