--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -20,30 +20,37 @@ jobs:
             proto-include-path: ../../proto
             output-format: subpackage
           - package-name: ni.measurementlink.discovery.v1.proto
+            proto-basepath: ../../third_party/ni-apis
             proto-subpath: ni/measurementlink/discovery/v1
             proto-include-path: ../../third_party/ni-apis
             output-format: subpackage
           - package-name: ni.measurementlink.measurement.v1.proto
+            proto-basepath: ../../third_party/ni-apis
             proto-subpath: ni/measurementlink/measurement/v1
             proto-include-path: ../../third_party/ni-apis
             output-format: subpackage
           - package-name: ni.measurementlink.measurement.v2.proto
+            proto-basepath: ../../third_party/ni-apis
             proto-subpath: ni/measurementlink/measurement/v2
             proto-include-path: ../../third_party/ni-apis
             output-format: subpackage
           - package-name: ni.measurementlink.proto
+            proto-basepath: ../../third_party/ni-apis
             proto-subpath: ni/measurementlink
             proto-include-path: ../../third_party/ni-apis
             output-format: subpackage
           - package-name: ni.measurementlink.sessionmanagement.v1.proto
+            proto-basepath: ../../third_party/ni-apis
             proto-subpath: ni/measurementlink/sessionmanagement/v1
             proto-include-path: ../../third_party/ni-apis/ni/grpcdevice/v1
             output-format: subpackage
           - package-name: ni.panels.v1.proto
+            proto-basepath: ../../third_party/ni-apis
             proto-subpath: ni/panels/v1
             proto-include-path: ../../third_party/ni-apis
             output-format: submodule
           - package-name: ni.protobuf.types
+            proto-basepath: ../../third_party/ni-apis
             proto-subpath: ni/protobuf/types
             proto-include-path: ../../third_party/ni-apis
             output-format: submodule
