--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,7 +16,7 @@ jobs:
         include:
           - package-name: ni.grpcdevice.v1.proto
             proto-basepath: ../../proto
-            proto-subpath: ni/grpcdevice/v1
+            proto-subpath: .
             proto-include-path: ../../proto
             output-format: subpackage
           - package-name: ni.measurementlink.discovery.v1.proto
