--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -8,6 +8,10 @@ on:
         default: ''
         required: true
         type: string
+      proto-basepath:
+        description: 'The base path for proto files used for generation.'
+        default: '../../third_party/ni-apis'
+        type: string
       proto-subpath:
         description: 'The subpath for the proto files.'
         default: ''
@@ -29,6 +33,7 @@ jobs:
     uses: ./.github/workflows/check_codegen.yml
     with:
       package-name: ${{ inputs.package-name }}
+      proto-basepath: ${{ inputs.proto-basepath }}
       proto-subpath: ${{ inputs.proto-subpath }}
       proto-include-path: ${{ inputs.proto-include-path }}
       output-basepath: ../../packages/${{ inputs.package-name }}/src
