--- a/packages/ni.grpcdevice.v1.proto/pyproject.toml
+++ b/packages/ni.grpcdevice.v1.proto/pyproject.toml
@@ -27,7 +27,10 @@ classifiers = [
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: Implementation :: CPython",
 ]
-packages = [{include = "src"}]
+packages = [
+  {include = "session_pb2", from = "src"},
+  {include = "session_pb2_grpc", from = "src"},
+]
 
 [tool.poetry.dependencies]
 python = "^3.9"
