Fix mypy errors

--- a/packages/ni.measurementlink.pinmap.v1.proto/pyproject.toml
+++ b/packages/ni.measurementlink.pinmap.v1.proto/pyproject.toml
@@ -91,13 +91,13 @@ exclude = [
 [[tool.mypy.overrides]]
 module = [
     "ni.measurementlink.pin_map_context_pb2",
-    "ni.measurementlink.pinmap.v1.session_management_service_pb2"
+    "ni.measurementlink.pinmap.v1.pin_map_service_pb2"
 ]
 ignore_missing_imports = true
 allow_untyped_calls = true
 ignore_errors = true
 [[tool.mypy.overrides]]
-module = ["ni.measurementlink.pinmap.v1.session_management_service_pb2_grpc"]
+module = ["ni.measurementlink.pinmap.v1.pin_map_service_pb2_grpc"]
 ignore_errors = true
 
 [tool.pyright]
