Remove exclusions on .pyi files and other modules for mypy

--- a/packages/ni.measurementlink.pinmap.v1.proto/pyproject.toml
+++ b/packages/ni.measurementlink.pinmap.v1.proto/pyproject.toml
@@ -83,21 +83,7 @@ files = "."
 namespace_packages = true
 strict = true
 explicit_package_bases = true
-exclude = [
-    "docs",
-    ".*\\.pyi$",
-]
-[[tool.mypy.overrides]]
-module = [
-    "ni.measurementlink.pin_map_context_pb2",
-    "ni.measurementlink.pinmap.v1.pin_map_service_pb2"
-]
-ignore_missing_imports = true
-allow_untyped_calls = true
-ignore_errors = true
-[[tool.mypy.overrides]]
-module = ["ni.measurementlink.pinmap.v1.pin_map_service_pb2_grpc"]
-ignore_errors = true
+exclude = ["docs"]
 
 [tool.pyright]
 include = ["src/", "tests/"]
