Add ni.grpc.extensions to the PR/CI checks.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -29,6 +29,7 @@ on:
 
 jobs:
   check_codegen:
+    if: ${{ inputs.proto-subpath != '' }}
     name: Check codegen for ${{ inputs.package-name }}
     uses: ./.github/workflows/check_codegen.yml
     with:
