Suppress pyright errors.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/packages/ni.grpc.extensions/pyproject.toml
+++ b/packages/ni.grpc.extensions/pyproject.toml
@@ -91,3 +91,6 @@ include = ["src/", "tests/"]
 [tool.pytest.ini_options]
 addopts = "--doctest-modules --doctest-plus --strict-markers"
 testpaths = ["tests"]
+
+[tool.isort]
+known_first_party = ["ni_grpc_extensions"]
