--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -10,7 +10,7 @@ on:
         type: string
       package-information-path:
         description: 'Path to the JSON file containing package information.'
-        default: './packages.json'
+        default: './packages/packages.json'
         type: string
 
 jobs:
