--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -49,6 +49,7 @@ jobs:
   check_docs:
     name: Check docs for ${{ inputs.package-name }}
     uses: ./.github/workflows/check_docs.yml
+    if: ${{ always() }}
     needs: [check_analyzers]
     with:
       package-name: ${{ inputs.package-name }}
