--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -16,7 +16,7 @@ jobs:
         include:
           - package-name: ni.grpc.extensions
             proto-subpath: ''
-            output-format: N/A
+            output-format: ''
           - package-name: ni.grpcdevice.v1.proto
             proto-basepath: ../../proto
             proto-subpath: .
