--- a/packages/ni-grpc-extensions/pyproject.toml
+++ b/packages/ni-grpc-extensions/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "ni.grpc.extensions"
+name = "ni-grpc-extensions"
 version = "0.1.0-dev0"
 license = "MIT"
 description = "gRPC Extensions"
