--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -15,29 +15,11 @@ on:
 
 jobs:
   get_package_info:
-    runs-on: ubuntu-latest
-    outputs:
-      proto-basepath: ${{ steps.parse_json.outputs.proto-basepath }}
-      proto-subpath: ${{ steps.parse_json.outputs.proto-subpath }}
-      proto-include-path: ${{ steps.parse_json.outputs.proto-include-path }}
-      output-format: ${{ steps.parse_json.outputs.output-format }}
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - name: Get package info from JSON
-        id: parse_json
-        run: |
-          info=$(jq -c --arg name "${{ inputs.package-name }}" '.[$name]' "${{ inputs.package-information-path }}")
-          if [ "$info" = "null" ]; then
-            echo "Error: Package '${{ inputs.package-name }}' not found in JSON file." >&2
-            exit 1
-          fi
-          echo "Package info: $info"
-          echo "proto-basepath=$(echo $info | jq -r '."proto-basepath"')" >> $GITHUB_OUTPUT
-          echo "proto-subpath=$(echo $info | jq -r '."proto-subpath"')" >> $GITHUB_OUTPUT
-          echo "proto-include-path=$(echo $info | jq -r '."proto-include-path"')" >> $GITHUB_OUTPUT
-          echo "output-format=$(echo $info | jq -r '."output-format"')" >> $GITHUB_OUTPUT
-
+    name: Get package info for ${{ inputs.package-name }}
+    uses: ./.github/workflows/get_package_info.yml
+    with:
+      package-name: ${{ inputs.package-name }}
+      package-information-path: ${{ inputs.package-information-path }}
   check_codegen:
     name: Check codegen for ${{ inputs.package-name }}
     needs: get_package_info
