--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -14,6 +14,9 @@ jobs:
     strategy:
       matrix:
         include:
+          - package-name: ni-grpc-extensions
+            proto-subpath: ''
+            output-format: ''
           - package-name: ni.grpcdevice.v1.proto
             proto-basepath: ../../proto
             proto-subpath: .
