--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -29,6 +29,7 @@ on:
 
 jobs:
   check_codegen:
+    if: ${{ inputs.proto-subpath != '' }}
     name: Check codegen for ${{ inputs.package-name }}
     uses: ./.github/workflows/check_codegen.yml
     with:
@@ -41,12 +42,10 @@ jobs:
   check_analyzers:
     name: Check analyzers for ${{ inputs.package-name }}
     uses: ./.github/workflows/check_analyzers.yml
-    needs: [check_codegen]
     with:
       package-name: ${{ inputs.package-name }}
   check_docs:
     name: Check docs for ${{ inputs.package-name }}
     uses: ./.github/workflows/check_docs.yml
-    needs: [check_analyzers]
     with:
       package-name: ${{ inputs.package-name }}
