--- a/.github/workflows/check_package.yml
+++ b/.github/workflows/check_package.yml
@@ -25,7 +25,7 @@ jobs:
       proto-basepath: ${{ needs.get_package_info.outputs.proto-basepath }}
       proto-subpath: ${{ needs.get_package_info.outputs.proto-subpath }}
       proto-include-path: ${{ needs.get_package_info.outputs.proto-include-path }}
-      output-basepath: ../../packages/${{ inputs.package-name }}/src
+      output-basepath: ./packages/${{ inputs.package-name }}/src
       output-format: ${{ needs.get_package_info.outputs.output-format }}
   check_analyzers:
     name: Check analyzers for ${{ inputs.package-name }}
