--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -9,21 +9,21 @@ on:
   workflow_dispatch:
 
 jobs:
+  get_packages:
+    runs-on: ubuntu-latest
+    outputs:
+      package-names: ${{ steps.parse_json.outputs.package-names }}
+    steps:
+      - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+      - id: parse_json
+        run: |
+          echo "package-names=$(jq -c 'keys' ./packages.json)" >> $GITHUB_OUTPUT
   check_package:
-    name: Check ${{ matrix.package-name }}
+    needs: get_packages
     strategy:
       matrix:
-        include:
-          - package-name: ni-grpc-extensions
-          - package-name: ni.grpcdevice.v1.proto
-          - package-name: ni.measurementlink.discovery.v1.proto
-          - package-name: ni.measurementlink.measurement.v1.proto
-          - package-name: ni.measurementlink.measurement.v2.proto
-          - package-name: ni.measurementlink.pinmap.v1.proto
-          - package-name: ni.measurementlink.proto
-          - package-name: ni.measurementlink.sessionmanagement.v1.proto
-          - package-name: ni.panels.v1.proto
-          - package-name: ni.protobuf.types
+        package-name: ${{ fromJson(needs.get_packages.outputs.package-names) }}
+    name: Check ${{ matrix.package-name }}
     uses: ./.github/workflows/check_package.yml
     with:
       package-name: ${{ matrix.package-name }}
