--- a/packages/ni.measurementlink.discovery.v1.client/.readthedocs.yaml
+++ b/packages/ni.measurementlink.discovery.v1.client/.readthedocs.yaml
@@ -13,4 +13,4 @@ build:
       - VIRTUAL_ENV=$READTHEDOCS_VIRTUALENV_PATH poetry -C packages/ni.measurementlink.discovery.v1.proto install --only main,docs
 
 sphinx:
-  configuration: packages/ni.measurementlink.discovery.v1.proto/docs/conf.py
+  configuration: packages/ni.measurementlink.discovery.v1.client/docs/conf.py
