Single source package information in packages.json (#94)

--- a/.github/workflows/check_codegen.yml
+++ b/.github/workflows/check_codegen.yml
@@ -10,7 +10,7 @@ on:
         type: string
       proto-basepath:
         description: 'The base path for proto files used for generation.'
-        default: '../../third_party/ni-apis'
+        default: './third_party/ni-apis'
         type: string
       proto-subpath:
         description: 'The path to proto files relative to proto-base-path.'
@@ -19,7 +19,7 @@ on:
         type: string
       proto-include-path:
         description: 'Additional path to include in the proto generation.'
-        default: '../../third_party/ni-apis'
+        default: './third_party/ni-apis'
         type: string
       output-basepath:
         description: 'The base output path for codegened files.'
@@ -64,9 +64,14 @@ jobs:
         run: poetry install -v --only main
       - name: Generate gRPC stubs
         run: |
-          poetry run grpc-generator --proto-basepath ${{ inputs.proto-basepath }} --proto-subpath ${{ inputs.proto-subpath }} --proto-include-path ${{ inputs.proto-include-path }} --output-basepath ${{ inputs.output-basepath }} --output-format ${{ inputs.output-format }}
+          poetry run grpc-generator \
+            --proto-basepath ${{ github.workspace }}/${{ inputs.proto-basepath }} \
+            --proto-subpath ${{ inputs.proto-subpath }} \
+            --proto-include-path ${{ github.workspace }}/${{ inputs.proto-include-path }} \
+            --output-basepath ${{ github.workspace }}/${{ inputs.output-basepath }} \
+            --output-format ${{ inputs.output-format }}
       - name: Check for out-of-date gRPC stubs
         run: |
-          git add ${{ inputs.output-basepath }}
-          git diff --exit-code --staged ${{ inputs.output-basepath }}
-          git diff --exit-code ${{ inputs.output-basepath }}
+          git add ${{ github.workspace }}/${{ inputs.output-basepath }}
+          git diff --exit-code --staged ${{ github.workspace }}/${{ inputs.output-basepath }}
+          git diff --exit-code ${{ github.workspace }}/${{ inputs.output-basepath }}
