--- a/packages/ni.measurementlink.sessionmanagement.v1.client/pyproject.toml
+++ b/packages/ni.measurementlink.sessionmanagement.v1.client/pyproject.toml
@@ -47,6 +47,8 @@ ni-measurementlink-sessionmanagement-v1-proto = { version = ">=0.1.0.dev0", allo
 ni-measurementlink-pinmap-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
 ni-measurementlink-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
 ni-grpcdevice-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
+ni-grpc-extensions = { version = ">=0.1.0.dev0", allow-prereleases = true }
+ni-measurementlink-discovery-v1-client = { version = ">=0.1.0.dev0", allow-prereleases = true }
 
 [tool.poetry.group.dev.dependencies]
 types-grpcio = ">=1.0"
