Include the _drivers folder and some extra files that the only the drivers depend on.
Signed-off-by: Michael Johansen <michael.johansen@ni.com>

--- a/packages/ni.measurementlink.sessionmanagement.v1.client/pyproject.toml
+++ b/packages/ni.measurementlink.sessionmanagement.v1.client/pyproject.toml
@@ -68,6 +68,24 @@ pytest-mock = ">=3.0"
 # Use a prerelease version of hightime for testing.
 hightime = { version = ">=0.3.0.dev0", allow-prereleases = true }
 
+[tool.poetry.extras]
+drivers = [
+  "nidaqmx",
+  "nidcpower",
+  "nidigital",
+  "nidmm",
+  "nifgen",
+  "niscope",
+  "niswitch",
+]
+nidaqmx = ["nidaqmx"]
+nidcpower = ["nidcpower"]
+nidigital = ["nidigital"]
+nidmm = ["nidmm"]
+nifgen = ["nifgen"]
+niscope = ["niscope"]
+niswitch = ["niswitch"]
+
 [tool.poetry.group.docs]
 optional = true
 
