--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,6 +21,7 @@ on:
           type: choice
           options:
             - none
+            - ni.datamonikers.v1.proto
             - ni.grpcdevice.v1.proto
             - ni.measurementlink.discovery.v1.proto
             - ni.measurementlink.measurement.v1.proto
