--- a/packages/ni.measurementlink.sessionmanagement.v1.client/pyproject.toml
+++ b/packages/ni.measurementlink.sessionmanagement.v1.client/pyproject.toml
@@ -36,13 +36,13 @@ pywin32 = { version = ">=303", platform = "win32" }
 deprecation = ">=2.1"
 traceloggingdynamic = { version = ">=1.0", platform = "win32" }
 python-decouple = ">=3.8"
-nidaqmx = { version = ">=0.8.0", extras = ["grpc"], optional = true }
-nidcpower = { version = ">=1.4.4", extras = ["grpc"], optional = true }
-nidigital = { version = ">=1.4.4", extras = ["grpc"], optional = true }
-nidmm = { version = ">=1.4.4", extras = ["grpc"], optional = true }
-nifgen = { version = ">=1.4.4", extras = ["grpc"], optional = true }
-niscope = { version = ">=1.4.4", extras = ["grpc"], optional = true }
-niswitch = { version = ">=1.4.4", extras = ["grpc"], optional = true }
+nidaqmx = { version = ">=0.8.0" }
+nidcpower = { version = ">=1.4.4" }
+nidigital = { version = ">=1.4.4" }
+nidmm = { version = ">=1.4.4" }
+nifgen = { version = ">=1.4.4" }
+niscope = { version = ">=1.4.4" }
+niswitch = { version = ">=1.4.4" }
 ni-measurementlink-sessionmanagement-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
 ni-measurementlink-pinmap-v1-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
 ni-measurementlink-proto = { version = ">=0.1.0.dev0", allow-prereleases = true }
@@ -67,24 +67,6 @@ pytest-doctestplus = ">=1.4"
 pytest-mock = ">=3.0"
 # Use a prerelease version of hightime for testing.
 hightime = { version = ">=0.3.0.dev0", allow-prereleases = true }
-
-[tool.poetry.extras]
-drivers = [
-  "nidaqmx",
-  "nidcpower",
-  "nidigital",
-  "nidmm",
-  "nifgen",
-  "niscope",
-  "niswitch",
-]
-nidaqmx = ["nidaqmx"]
-nidcpower = ["nidcpower"]
-nidigital = ["nidigital"]
-nidmm = ["nidmm"]
-nifgen = ["nifgen"]
-niscope = ["niscope"]
-niswitch = ["niswitch"]
 
 [tool.poetry.group.docs]
 optional = true
@@ -147,7 +129,7 @@ module = "ni_grpc_extensions.channelpool"
 ignore_missing_imports = true
 
 [tool.pyright]
-include = ["src/", "tests/"]
+include = ["src/"]
 exclude = ["**/*_pb2_grpc.py", "**/*_pb2_grpc.pyi", "**/*_pb2.py", "**/*_pb2.pyi"]
 
 [tool.pytest.ini_options]
